[gd_scene load_steps=3 format=3 uid="uid://by7g1ga8t4t5g"]

[ext_resource type="Script" uid="uid://dqlj5o0sn3upp" path="res://Weapons/WeaponTemplates/gun_ranged_weapon.gd" id="1_g7ide"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1savr"]

[node name="GunRangedWeapon" type="Node2D"]
script = ExtResource("1_g7ide")

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="WeaponIcon" type="Sprite2D" parent="."]

[node name="AttackStates" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1savr")
speed_scale = 0.0

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
